Close editor view when asked to

We need to mimic the interface of KTextEditor::Application here;
closeDocument is called by KTextEditor when trying to close a document
which has been deleted before.

BUG: 359441
FIXED-IN: 5.0.1